# thai-checkers

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  DameRules.md  Makefile  PionRules.md  README.md  build_optimized.sh  coverage.sh  optimized.sh  run_optimized.sh
.github/: copilot-instructions.md
cmake/: Coverage.cmake
include/: Analyzer.h  AnalyzerTypes.h  Board.h  DameAnalyzer.h  Explorer.h  Game.h  Legals.h  Move.h  Options.h  Piece.h  PionAnalyzer.h  Position.h  Traversal.h  main.h  utils.h
scripts/: commit_with_format.sh  format_all.sh  format_check.sh  format_staged.sh  lint_clang_tidy.sh
scripts/.archive/: format_all.sh  format_staged.sh
src/: Analyzer.cpp  Board.cpp  DameAnalyzer.cpp  Explorer.cpp  Game.cpp  Legals.cpp  Move.cpp  Options.cpp  PionAnalyzer.cpp  Position.cpp  Traversal.cpp  main.cpp  utils.cpp
src/tests/: CallbackDebugTest.cpp  CheckpointTest.cpp  CompactCheckpointTest.cpp  CompactSizeTest.cpp  DebugCompactTest.cpp  ExplorerTest.cpp  GameTest.cpp  MainFunctionalityTest.cpp  ResumeOrStartTest.cpp  SelectorTest.cpp
tests/: AnalyzerTest.cpp  BoardTest.cpp  CMakeLists.txt  DameAnalyzerTest.cpp  ExplorerTest.cpp  MoveTest.cpp  PionAnalyzerTest.cpp  PositionTest.cpp
